--- a/app/index.html
+++ b/app/index.html
@@ -34,10 +34,15 @@
 
         <!-- Add your site or application content here -->
 
+        <script>
+            var XSRF_TOKEN = '02acf8ec4fef4bb8a14f04eec7cc87f1';
+        </script>
+
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/vendor/jquery.min.js"></script>
         <script src="scripts/vendor/lodash.min.js"></script>
         <script src="scripts/vendor/backbone-min.js"></script>
+        <script src="scripts/lib/api.js"></script>
         <script src="scripts/main.js"></script>
         <script src="scripts/views/application-view.js"></script>
         <script src="scripts/models/application-model.js"></script>
