--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
         <!-- Add your site or application content here -->
 
         <script>
+            var API_ORIGIN = 'https://tictail.com'
             var XSRF_TOKEN = '02acf8ec4fef4bb8a14f04eec7cc87f1';
         </script>
 
