--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content=""/>
         <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="styles/main.css"/>
+        <link href="styles/bootstrap.min.css" rel="stylesheet">
 
     </head>
     <body>
@@ -43,6 +44,7 @@
         <script src="scripts/vendor/jquery.min.js"></script>
         <script src="scripts/vendor/lodash.min.js"></script>
         <script src="scripts/vendor/backbone-min.js"></script>
+        <script src="scripts/vendor/bootstrap.min.js"></script>
         <script src="scripts/lib/api.js"></script>
         <script src="scripts/main.js"></script>
         <script src="scripts/views/application-view.js"></script>
