--- a/app/index.html
+++ b/app/index.html
@@ -14,21 +14,25 @@
 
     </head>
     <body>
-    <div class="container">
-        <div class="hero-unit">
-            <h1>Cheerio!</h1>
-            <p>You now have</p>
-            <ul>
-                <li>HTML5 Boilerplate</li>
-                <li>jQuery</li>
-                <li>Backbone.js</li>
-                <li>Lodash</li>
-                <li>Mocha</li>
-            </ul>
-            <p>installed.</p>
-            <h3>Enjoy coding! - Yeoman</h3>
-        </div>
-    </div>
+			<div class="container-fluid">
+					<div class="row-fluid">
+						<div class="span2">
+							<ul>
+									<li>HTML5 Boilerplate</li>
+									<li>jQuery</li>
+									<li>Backbone.js</li>
+									<li>Lodash</li>
+									<li>Mocha</li>
+							</ul>
+						</div>
+						<div class="span10">
+							<h1>Cheerio!</h1>
+							<p>You now have</p>
+							<p>installed.</p>
+							<h3>Enjoy coding! - Yeoman</h3>
+						</div>
+					</div>
+			</div>
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
         <![endif]-->
