--- a/app/index.html
+++ b/app/index.html
@@ -16,16 +16,11 @@
     <body>
 			<div class="container-fluid">
 					<div class="row-fluid">
-						<div class="span2">
-							<ul>
-									<li>HTML5 Boilerplate</li>
-									<li>jQuery</li>
-									<li>Backbone.js</li>
-									<li>Lodash</li>
-									<li>Mocha</li>
+						<div class="span4">
+							<ul id="product_list" class="media-list">
 							</ul>
 						</div>
-						<div class="span10">
+						<div class="span8">
 							<h1>Cheerio!</h1>
 							<p>You now have</p>
 							<p>installed.</p>
