Render item navigation via Backbone views

--- a/app/index.html
+++ b/app/index.html
@@ -16,9 +16,7 @@
     <body>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="span4">
-                    <ul id="product_list" class="media-list">
-                    </ul>
+                <div id="navigation" class="span4">
                 </div>
                 <div class="span8">
                     <h1>Cheerio!</h1>
@@ -47,6 +45,8 @@
         <script src="scripts/lib/api.js"></script>
         <script src="scripts/main.js"></script>
         <script src="scripts/views/application-view.js"></script>
+        <script src="scripts/views/item.js"></script>
+        <script src="scripts/views/item-list.js"></script>
         <script src="scripts/models/application-model.js"></script>
         <script src="scripts/collections/application-collection.js"></script>
         <script src="scripts/routes/application-router.js"></script>
