Removing dummy content

--- a/app/index.html
+++ b/app/index.html
@@ -18,12 +18,7 @@
             <div class="row-fluid">
                 <div id="navigation" class="span4">
                 </div>
-                <div class="span8">
-                    <h1>Cheerio!</h1>
-                    <p>You now have</p>
-                    <p>installed.</p>
-                    <h3>Enjoy coding! - Yeoman</h3>
-                </div>
+                <div class="span8"></div>
             </div>
         </div>
         <!--[if lt IE 7]>
