change backgronud when image is loaded

--- a/app/index.html
+++ b/app/index.html
@@ -54,5 +54,6 @@
             g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
             s.parentNode.insertBefore(g,s)}(document,'script'));
         </script>
+			<img id="background_image" style="display: none;" />
     </body>
 </html>
