--- a/app/index.html
+++ b/app/index.html
@@ -16,8 +16,7 @@
     <body>
         <div class="container-fluid">
             <div class="row-fluid">
-                <div id="navigation" class="span4">
-                </div>
+                <div id="navigation" class="span4"></div>
                 <div class="span8"></div>
             </div>
         </div>
@@ -42,6 +41,7 @@
         <script src="scripts/views/application-view.js"></script>
         <script src="scripts/views/item.js"></script>
         <script src="scripts/views/item-list.js"></script>
+        <script src="scripts/views/item-info.js"></script>
         <script src="scripts/models/application-model.js"></script>
         <script src="scripts/collections/application-collection.js"></script>
         <script src="scripts/routes/application-router.js"></script>
